2009-09-14  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_conn_conf_ip_panel.c
	(nwam_compose_multi_ip_tree_view), (populate_wifi_fav),
	(populate_panel), (nwam_conf_ip_panel_new), (apply),
	(nwam_conf_ip_panel_finalize), (show_changed_cb),
	(nwam_conn_common_multi_cell_editing_started_cb),
	(nwam_conn_common_multi_cell_editing_canceled_cb),
	(nwam_conn_multi_ipv4_cell_edited_cb),
	(nwam_conn_multi_ipv6_cell_edited_cb),
	(wireless_tab_up_button_clicked_cb),
	(wireless_tab_down_button_clicked_cb):
	* capplet/nwam_conn_conf_ip_panel.h:
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_init),
	(nwam_capplet_dialog_finalize),
	(nwam_capplet_dialog_set_ok_sensitive_by_voting):
	* capplet/nwam_pref_dialog.h:
	Fixed 11018 adding prefix 16 in ipv6 address results in prefix zero
	being added.

2009-09-11  Darren Kenny  <darren.kenny@sun.com>

	* capplet/nwam-manager-properties.ui, capplet/nwam_env_pref_dialog.c,
	  common/nwamui_env.c, common/nwamui_env.h, tests/main.c: 
	  Fix defect#11290 to remove all references to the enable-svcs and
	  disable-svcs GUI elements.
	* common/nwamui_wifi_net.c: 
	  Fix a minor nit, to use the display string instead of the essid for
	  generating the a11y text, since it has more detail about the type of
	  the network AP.

2009-09-11  Lin Ma  <Lin.Ma@Sun.COM>

	* daemon/nwam-enm-item.c (nwam_enm_item_class_init),
	(nwam_enm_item_init), (nwam_enm_item_finalize),
	(on_nwam_enm_toggled), (on_nwam_enm_notify),
	(nwam_enm_item_set_enm):
	* daemon/nwam-env-item.c (nwam_env_item_class_init),
	(nwam_env_item_init), (nwam_env_item_finalize),
	(on_nwam_env_toggled), (on_nwam_env_notify):
	* daemon/nwam-menuitem.h:
	* daemon/nwam-ncu-item.c (nwam_ncu_item_class_init),
	(nwam_ncu_item_init), (nwam_ncu_item_finalize),
	(on_nwam_ncu_toggled), (on_nwam_ncu_notify):
	* daemon/nwam-tooltip-widget.c
	(nwam_object_tooltip_widget_class_init), (nwam_ncu_notify):
	* daemon/nwam-wifi-item.c (nwam_wifi_item_class_init),